# File-Organiser

./: .gitignore  README.md  pyproject.toml  test_operations.py
file_organizer/: __init__.py  cli.py  operations.py
